compiler/examples/test_if.expected
Test error
Error when node properties have been checked:
test_if.mls:6:3-35: assigned expression with type int to variable a(2) with type bool
