compiler/examples/test_if.mls
node test_int_cond(i1: int, i2: int, cond: bool) returns (a: bool)
var b: bool; c: int;
let
  c = if i1 >= i2 then i1 else i2;  
  b = if c > 10 then false else true;
  a = if cond && b then c else i1;
tel
